objects/Agreement__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>ACM_Facility_ID__c</fullName>
        <label>ACM Facility ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absa_as_Agent_Principal__c</fullName>
        <label>Absa as Agent / Principal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>principal/agent</fullName>
                </value>
                <value>
                    <fullName>principal but not as agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absa_as_Borrower_Lender__c</fullName>
        <label>Absa as Borrower / Lender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgreementDocumentType__c</fullName>
        <label>Agreement Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agreement_Document_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Added_From_Libary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Added From Libary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Comments__c</fullName>
        <label>Agreement Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Description__c</fullName>
        <label>Agreement Description</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_ID__c</fullName>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Agreement ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Agreement_No__c</fullName>
        <displayFormat>A-{000000}</displayFormat>
        <label>Agreement No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agreement_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field used to identify which Agreement Template was used to generated the agreement.</description>
        <inlineHelpText>System field used to identify which Agreement Template was used to generated the agreement.</inlineHelpText>
        <label>Agreement Template</label>
        <referenceTo>Agreement_Template__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agreement Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TMG_Product_Level_3__c</field>
                <operation>equals</operation>
                <valueField>Product_Agreement__c.TMG_Product_Level_3__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Agreement__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorised_Personnel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorised Personnel</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Minimum_Transfer_Amount__c</fullName>
        <label>Bank Minimum Transfer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <formula>Matter_Deal__r.Bank__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bilateral_Unilateral__c</fullName>
        <defaultValue>&quot;Bilateral&quot;</defaultValue>
        <label>Bilateral / Unilateral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bilateral</fullName>
                </value>
                <value>
                    <fullName>Unilateral (Counterparty)</fullName>
                </value>
                <value>
                    <fullName>Unilateral (Bank)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_Clause_Date__c</fullName>
        <formula>IF(Master_Agreement_Required_Prior_to_First__c = TRUE , null , (Master_Agreement_Start_Date__c  +  Break_Clause_days__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Break Clause Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Break_Clause_days__c</fullName>
        <label>Break Clause (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABSA Capital Securities PTY LTD</fullName>
                </value>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>Prime Services</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buy_Sell_Back_Applies__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <label>Buy/Sell-Back Applies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_USB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CD/USB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Agent__c</fullName>
        <label>Calculation Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Counterparty</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Amount__c</fullName>
        <label>Cash Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Amount_counterparty__c</fullName>
        <label>Cash Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Name_2__c</fullName>
        <formula>Matter_Deal__r.advpm__Primary_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counterparty</inlineHelpText>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Counterparty/Client</inlineHelpText>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closure_Reason__c</fullName>
        <label>Closure Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Provision_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidentiality Provision / Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counterparty_Minimum_Transfer_Amount__c</fullName>
        <label>Counterparty Minimum Transfer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counterparty_as_Agent_Principal__c</fullName>
        <label>Counterparty as Agent / Principal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal/Agent</fullName>
                    <label>principal/agent</label>
                </value>
                <value>
                    <fullName>Principal but not as agent</fullName>
                    <label>principal but not as agent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counterparty_as_Borrower_Lender__c</fullName>
        <label>Counterparty as Borrower / Lender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Issue__c</fullName>
        <label>Country of Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Default_Threshold_Re_Absa__c</fullName>
        <label>Cross Default Threshold Re Absa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cross_Default_Threshold_Re_Counterparty__c</fullName>
        <label>Cross Default Threshold Re Counterparty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Re_Absa__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Re_Counterparty__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() -  DATEVALUE(Status_Change_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equity_Percentage_Counterparty__c</fullName>
        <label>Equity Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Equity_Percentage__c</fullName>
        <label>Equity Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalAgreementId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalAgreementId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Limit__c</fullName>
        <description>Facility limit to determine each Lender&apos;s portion</description>
        <label>Facility Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Loan_Date__c</fullName>
        <formula>(IF(ISBLANK(Facility_Loan_Name__r.Availability_Start_Date__c), &quot;&quot;, 
TEXT(DAY(Facility_Loan_Name__r.Availability_Start_Date__c))+&quot;/&quot; 
+TEXT(MONTH(Facility_Loan_Name__r.Availability_Start_Date__c))+&quot;/&quot; 
+TEXT(YEAR(Facility_Loan_Name__r.Availability_Start_Date__c))))</formula>
        <label>Facility Loan Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Loan_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Loan Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Agreement__r.Matter_Deal__c</field>
                <operation>equals</operation>
                <valueField>$Source.Loan_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Year_End_Date__c</fullName>
        <description>The Financial Year End Date of the relationship specified on the associated Matter / Deal.</description>
        <formula>IF(ISPICKVAL( Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c , &quot;JANUARY&quot;), 
DATE( YEAR( TODAY() ), 01 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;FEBRUARY&quot;), 
DATE( YEAR( TODAY() ), 02 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;MARCH&quot;), 
DATE( YEAR( TODAY() ), 03 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;APRIL&quot;), 
DATE( YEAR( TODAY() ), 04 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;MAY&quot;), 
DATE( YEAR( TODAY() ), 05 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;JUNE&quot;), 
DATE( YEAR( TODAY() ), 06 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;JULY&quot;), 
DATE( YEAR( TODAY() ), 07 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;AUGUST&quot;), 
DATE( YEAR( TODAY() ), 08 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;SEPTEMBER&quot;), 
DATE( YEAR( TODAY() ), 09 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;OCTOBER&quot;), 
DATE( YEAR( TODAY() ), 10 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;NOVEMBER&quot;), 
DATE( YEAR( TODAY() ), 11 + 1, 1 ) -1, IF(ISPICKVAL(Matter_Deal__r.advpm__Primary_Account__r.Financial_Year_End_Month__c, &quot;DECEMBER&quot;), 
DATE( YEAR( TODAY() ), 12, 31 ), null) ) ) ) ) ) ) ) ) ) ) )</formula>
        <inlineHelpText>The Financial Year End Date of the relationship specified on the associated Matter / Deal.</inlineHelpText>
        <label>Financial Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolderID__c</fullName>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMRA_Transaction_Type__c</fullName>
        <label>GMRA Transaction Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repo</fullName>
                </value>
                <value>
                    <fullName>Sell/Buy-Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governing_Law__c</fullName>
        <label>Governing Law</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>Australian Capital Territory</fullName>
                </value>
                <value>
                    <fullName>Belgium Law (2016 CSA)</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>California - USA</fullName>
                </value>
                <value>
                    <fullName>Canadian</fullName>
                </value>
                <value>
                    <fullName>Delaware - USA</fullName>
                </value>
                <value>
                    <fullName>English Law</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Malaysian</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>New South Wales - Australian</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>People&apos;s Republic of China</fullName>
                </value>
                <value>
                    <fullName>Queelsland</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South African Law</fullName>
                </value>
                <value>
                    <fullName>South Australia</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>State of New York Law</fullName>
                </value>
                <value>
                    <fullName>Swiss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imported_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Jurisdiction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_HotDocs_Answer_Set_ID__c</fullName>
        <label>Last HotDocs Answer Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <description>Facility limit to determine each Lender&apos;s portion</description>
        <label>Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Linked__c</fullName>
        <label>Loan-Linked</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Matter/Deal filtered to TMG Deal only</description>
        <label>Loan Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>advpm__Matter__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Deal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Agreements (Loan Name)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Agreement_Type__c</fullName>
        <label>Main Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agreement_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Maintenance_Amount_Absa__c</fullName>
        <label>Margin Maintenance Amount - Absa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Net Exposure</fullName>
                </value>
                <value>
                    <fullName>Own Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Maintenance_Amount_Counterparty__c</fullName>
        <label>Margin Maintenance Amount - Counterparty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Net Exposure</fullName>
                </value>
                <value>
                    <fullName>Own Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Maintenance_Own_Amount_Absa__c</fullName>
        <label>Margin Maintenance Own Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Maintenance_Own_Amount_Counter__c</fullName>
        <label>Margin Maintenance Own Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Name__c</fullName>
        <formula>Matter_Deal__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Required_Prior_to_First__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Master Agreement Required Prior to First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Start_Date__c</fullName>
        <label>Master Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Type__c</fullName>
        <label>Master Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Master_Agreement_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Agreement_Version__c</fullName>
        <label>Master Agreement Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Master_Agreement_Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter/Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premier_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prime_Services_Client__c</fullName>
        <formula>TEXT(Matter_Deal__r.Prime_Services_Client__c)</formula>
        <label>Prime Services Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Type__c</fullName>
        <label>Principal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disclosed</fullName>
                </value>
                <value>
                    <fullName>Undisclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Details</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Product Grouping</label>
        <referenceTo>Product_Level_2__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Records_Retention__c</fullName>
        <label>Records Retention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Records_Retention</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Registration_Number__c</fullName>
        <formula>Client_Name__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <formula>TEXT(Matter_Deal__r.Relationship_Type_picklist__c)</formula>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Matter_Deal__r.Relationship__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Request_Sub_Status__c</fullName>
        <label>Request Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Request_Sub_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewDate__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Comments__c</fullName>
        <label>Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Due_Date__c</fullName>
        <label>Review Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Review in Progress</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDS_CP_Type__c</fullName>
        <label>SDS CP Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDS_CP_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDS_ID_Account__c</fullName>
        <formula>Client_Name__r.SDS__c</formula>
        <label>SDS ID (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensitive__c</fullName>
        <label>Sensitive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMG_Product_Level_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Product Grouping</label>
        <referenceTo>TMG_Product_Level_3__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CNSG</fullName>
                </value>
                <value>
                    <fullName>TSG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Currency__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Termination Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
</CustomObject>